almost all section completed and responsive on small ,medium and large devices but banner and footer background image related issue is not solved yet.

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -29,7 +29,14 @@
   #banner_section {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
   }
+  /* #banner {
+    width: 100%;
+    object-fit: cover;
+    background-size: cover;
+    background-position: center;
+  } */
   #banner_content {
     padding: 10px;
   }
@@ -38,10 +45,10 @@
     text-align: center;
   }
   #circle {
-    width: 100%;
+    width: 70%;
   }
   #microphone {
-    width: 25%;
+    width: 20%;
   }
   #sub_title {
     font-size: 0.75rem;
@@ -113,6 +120,9 @@
   #hosts_introduction {
     text-align: center;
   }
+  #host {
+    padding-bottom: 60px;
+  }
   #social_icons {
     justify-content: center;
   }
@@ -124,11 +134,11 @@
     padding: 20px;
   }
   #footer_image img {
-    width: 100%;
+    width: 80%;
   }
   #footer_icons {
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
   }
 }
 /* Medium Device: 576px to 992 px (Optional)  */
