--- a/styles/tech_wave.css
+++ b/styles/tech_wave.css
@@ -79,9 +79,8 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
   width: 100%;
-  height: 100vh;
+  /* height: 50vh; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -94,6 +93,7 @@ header {
   margin: 0 auto;
   position: relative;
 }
+
 #banner_image {
   position: relative;
   display: inline-block;
@@ -103,6 +103,7 @@ header {
   width: 450px;
   border: 8px solid #2a186c;
   border-radius: 50%;
+  /* padding-top: 50px; */
 }
 #microphone {
   width: 116px;
@@ -146,7 +147,6 @@ header {
 }
 #btn_group {
   display: flex;
-  flex-direction: column;
   gap: 15px;
   justify-content: center;
 }
@@ -161,7 +161,7 @@ main > section {
 /* podcast design */
 #podcast_Container {
   background-color: #1a0b2e;
-  padding-top: 50px;
+  padding-top: 13 0px;
 }
 #stats_cards_container {
   display: grid;
@@ -324,14 +324,14 @@ main > section {
 
 #footer_icons {
   display: flex;
-  gap: 40px;
+  gap: 25px;
   color: #ffffff;
   margin-bottom: 32px;
 }
 
 #footer_icon {
   display: flex;
-  gap: 10px;
+  gap: 8px;
 }
 
 #footer_image img {
